--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,31 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Rooms</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Room name</th>
-      <th>Room depth</th>
-      <th>Room width</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @rooms.each do |room| %>
-      <tr>
-        <td><%= room.room_name %></td>
-        <td><%= room.room_depth %></td>
-        <td><%= room.room_width %></td>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Room', new_room_path %>
+<div class="room-title-area px-3">
+  <h1>rooms</h1>
+  <%= link_to new_room_path, title: "New", class: "btn p-0 text-dark", remote: true do %>
+    <i class="fas fa-plus align-middle pr-1"></i><span class="align-middle">Create A New room</span>
+  <% end %>
+</div>
+<div class="pt-3 p-1 text-nowrap room-index-area" id="roomsIndex">
+  <%= render @rooms %>
+</div>
