--- a/app/views/areas/_form.html.erb
+++ b/app/views/areas/_form.html.erb
@@ -1,27 +1,19 @@
-<%= form_with(model: area, local: true) do |form| %>
+<%= form_with(model: area, url: [room, area], remote: true, html: {name: "areaForm", class: "p-2"} ) do |form| %>
   <% if area.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(area.errors.count, "error") %> prohibited this area from being saved:</h2>
-
       <ul>
-      <% area.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% ares.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
   <div class="field">
-    <%= form.label :put_depth %>
-    <%= form.number_field :put_depth %>
+    <%= form.text_area :content, rows: 4 %>
   </div>
-
-  <div class="field">
-    <%= form.label :put_width %>
-    <%= form.number_field :put_width %>
-  </div>
-
-  <div class="actions">
+  <div class="actions text-right">
+    <%= link_to "Close", new_room_area_path(room), class: "btn btn-secondary", remote: true %>
     <%= form.submit %>
   </div>
 <% end %>
